--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@eslint/css": "^0.14.1",
     "ajv": "^8.17.1",
     "eslint": "^10.0.0",
+    "eslint-plugin-no-unsanitized": "^4.1.4",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-sonarjs": "^3.0.6",
+    "eslint-plugin-xss": "^0.1.12",
     "prettier": "^3.8.1",
     "puppeteer": "^24.37.2",
     "shx": "^0.4.0",
+    "ts-api-utils": "^2.4.0",
     "wawoff2": "^2.0.1",
     "web-ext": "^9.3.0"
   },
