--- a/ext/autogen/.nycrc
+++ b/ext/autogen/.nycrc
@@ -2,20 +2,20 @@
   "all": true,
   "check-coverage": false,
   "include": [
-    "scripts/**/*.js",
-    "!scripts/**/*.test.js"
+    "../scripts/**/*.js",
+    "!../scripts/**/*.test.js"
   ],
   "exclude": [
-    "scripts/sw/helpers.js",
-    "scripts/sw/message.js",
-    "test/**/*.js"
+    "../scripts/sw/helpers.js",
+    "../scripts/sw/message.js",
+    "../test/**/*.js"
   ],
   "reporter": [
     "text",
     "text-summary",
     "html"
   ],
-  "report-dir": "coverage",
+  "report-dir": "../coverage",
   "temp-dir": ".nyc_output",
   "extension": [
     ".js"
